# home-control-backend

./: .gitignore  Cargo.toml  README.md  dynamic_led.json
src/: api.rs  device.rs  lib.rs  main.rs  routes.rs  util.rs  verifier.rs
src/api/: copts.rs  device.rs  dynamic.rs  hub.rs  mod.rs  routes.rs  util.rs  verifier.rs
src/components/: dist_checker.rs  led.rs  mainhub.rs  mainhub_devices.rs  mod.rs
src/web/: mod.rs  routes.rs  verifier.rs
tests/: test_dynamic_device.rs
