[package]
name = "home_control_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
anyhow = "1.0.68"
async-trait = "0.1.60"
bytes = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
dyn-clone = "1.0.10"
futures = "0.3.28"
gethostname = "0.4.1"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.20"
narwhal-tooth = { path = "../narwhal-tooth" } # todo: make this to official version
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.152"
serde_json = "1.0.91"
sha2 = "0.10.6"
tokio = { version = "1.28.2", features = ["full"] }
